fix: color contrast in light mode

--- a/style.css
+++ b/style.css
@@ -158,6 +158,15 @@ body.dark {
   color: white;
 }
 
+body .about-text p,
+body .about-text a {
+  color: black;
+}
+
+body.dark .about-text p {
+  color: #d4d4d4;
+}
+
 /* header {
   display: flex;
   flex-direction: column;
@@ -269,7 +278,7 @@ body.dark {
       rgba(0, 0, 0, 0.5) 0px 5px 25px 0px;
     padding: 1rem;
     transform: translateX(100%);
-    transition: transform 0.5s cubic-bezier(0.3, -0.28, 0.735, 0.045);
+    transition: transform 0.4s cubic-bezier(0.3, -0.28, 0.735, 0.045);
 
     li {
       margin: 0.4rem 0;
@@ -296,7 +305,11 @@ body.dark {
   /* height: 320px; */
 }
 
-svg {
+body svg {
+  color: black;
+}
+
+body.dark svg {
   /* width: 24px;
   height: 24px; */
   fill: var(--clr-link-dark);
@@ -313,7 +326,15 @@ section#About {
   margin: 5rem 0;
 }
 
-section#About a {
+body section#About a {
+  color: black;
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
+body.dark section#About a {
   text-decoration-color: var(--clr-link-light);
   text-decoration-style: dotted;
   color: white;
@@ -351,10 +372,6 @@ footer ul {
 .about-heading {
   font-size: 2rem;
   font-weight: 700;
-}
-
-.about-text p {
-  color: #d4d4d4;
 }
 
 .about-img {
